# CTS-SAT-1-Data-Pipeline

./: .dockerignore  .env.example  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py  95c693079f4d_add_tle0_and_audio_waterfall_artifact_.py  ac75b2b7d0a3_drop_audio_blob_columns.py
src/cts1_data_pipeline/: __init__.py  frames.py  models.py  settings.py
src/cts1_data_pipeline/database/: __init__.py  repository.py  schema.py
src/cts1_data_pipeline/decoding/: __init__.py  decoder.py
src/cts1_data_pipeline/demodulation/: __init__.py  frontiersat.yml  runner.py
src/cts1_data_pipeline/pipeline/: __init__.py  assets.py
src/cts1_data_pipeline/satnogs/: __init__.py  client.py
tests/: test_pipeline.py  test_placeholder.py
