[project]
name = "cts1-data-pipeline"
version = "0.1.0"
description = "Data processing pipeline for CTS-SAT-1 data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru",
    "polars",
    "numpy",
    "requests>=2.34.2",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
