[project]
name = "cts1_data_pipeline"
version = "0.1.0"
description = "Data processing pipeline for CTS-SAT-1 data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.8",
    "dagster-webserver>=1.8",
    "httpx>=0.27",
    "polars>=1.0",
    "dataframely>=0.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "tenacity>=8.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
